--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/api/signup/route.ts", "app/api/auth/[...nextauth]/route.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/api/signup/route.ts", "app/api/auth/[...nextauth]/route.js", "app/login/page.tsx", "store/authSlice/authSlice.ts", "store/store.ts"],
   "exclude": ["node_modules"]
 }
