--- a/package.json
+++ b/package.json
@@ -13,15 +13,9 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.13",
     "@mui/material": "^5.15.13",
-    "@reduxjs/toolkit": "^2.2.1",
-    "axios": "^1.6.8",
-    "bcryptjs": "^2.4.3",
-    "mongoose": "^8.2.2",
     "next": "13.5.4",
-    "next-auth": "^4.24.7",
     "react": "^18",
-    "react-dom": "^18",
-    "react-redux": "^9.1.0"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
