--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.13",
+    "@mui/joy": "^5.0.0-beta.31",
     "@mui/material": "^5.15.13",
     "next": "13.5.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "use-count-up": "^3.0.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
