--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
+    "swiper": "^11.0.7",
     "use-count-up": "^3.0.1"
   },
   "devDependencies": {
