--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.15.13",
     "next": "13.5.4",
     "react": "^18",
+    "react-countup": "^6.5.2",
     "react-dom": "^18",
     "swiper": "^11.0.7",
     "use-count-up": "^3.0.1"
