--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@mui/icons-material": "^5.15.13",
     "@mui/joy": "^5.0.0-beta.31",
     "@mui/material": "^5.15.13",
+    "bcryptjs": "^2.4.3",
+    "mongoose": "^8.2.4",
     "next": "13.5.4",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-countup": "^6.5.2",
     "react-dom": "^18",
