--- a/package.json
+++ b/package.json
@@ -15,17 +15,24 @@
     "@mui/joy": "^5.0.0-beta.31",
     "@mui/material": "^5.15.13",
     "bcryptjs": "^2.4.3",
+    "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "mongoose": "^8.2.4",
     "next": "13.5.4",
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-countup": "^6.5.2",
     "react-dom": "^18",
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7",
     "swiper": "^11.0.7",
     "use-count-up": "^3.0.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/js-cookie": "^3.0.6",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
